# git-drive

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md
.github/workflows/: checks.yml  releases.yml
src/: args.rs  config.rs  data.rs  delete.rs  drive.rs  edit.rs  io.rs  list.rs  main.rs  new.rs  ui.rs
src/config/: json.rs
src/ui/: tui.rs  validation.rs
