[package]
name = "git_drive"
version = "0.5.0"
authors = ["Paul Horn <developer@knutwalker.de>"]
description = "Support for switching git authors and co-authors"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knutwalker/git-drive"
default-run = "git-drive"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caseless = "0.2.1"
console = "0.15.1"
clap = { version = "3.2.22", default-features = false, features = ["std"] }
dialoguer = { version = "0.10.2", default-features = false }
directories = "4.0.1"
eyre = "0.6.8"
nanoserde = "0.1.30"
once_cell = "1.15.0"
unicode-normalization = "0.1.22"

[profile.release]
codegen-units = 8
debug = false
debug-assertions = false
lto = 'thin'
opt-level = 3
overflow-checks = true
rpath = false
strip = true

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} {{version}}"
sign-commit = true
sign-tag = true
dev-version = false

[[bin]]
name = "git-drive"
path = "src/main.rs"
