[package]
name = "git_drive"
version = "0.5.0"
authors = ["Paul Horn <developer@knutwalker.de>"]
description = "Support for switching git authors and co-authors"
edition = "2021"
rust-version = "1.60.0"                                          # MSRV
license = "MIT OR Apache-2.0"
repository = "https://github.com/knutwalker/git-drive"
default-run = "git-drive"
publish = false

[dependencies]
caseless = "0.2.1"
clap = { version = "4.0.30", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
co-authors = "0.1.0"
console = "=0.15.1" # keep at 0.15.1 to avoid lazy_static dependency
dialoguer = { version = "0.10.2", default-features = false }
directories = "4.0.1"
eyre = "0.6.8"
nom = "7.1.1"
once_cell = "1.15.0"
unicode-normalization = "0.1.22"

[dev-dependencies]
assert_fs = "1.0.7"

[profile.release]
codegen-units = 8
debug = false
debug-assertions = false
lto = 'thin'
opt-level = 3
overflow-checks = true
rpath = false
strip = true

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} {{version}}"
sign-commit = true
sign-tag = true
dev-version = false

[[bin]]
name = "git-drive"
path = "src/main.rs"
