[package]
name = "git-drive"
version = "0.6.1"
authors = ["Paul Horn <developer@knutwalker.de>"]
description = "Support for switching git authors and co-authors"
edition = "2021"
rust-version = "1.64.0"                                          # MSRV
license = "MIT OR Apache-2.0"
repository = "https://github.com/knutwalker/git-drive"
default-run = "git-drive"
publish = false

[dependencies]
caseless = "0.2.1"
clap = { version = "4.1.4", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
co-authors = "0.1.0"
console = "=0.15.1" # keep at 0.15.1 to avoid lazy_static dependency
dialoguer = { version = "0.10.3", default-features = false }
directories = "4.0.1"
eyre = "0.6.8"
nom = "7.1.3"
once_cell = "1.17.0"
unicode-normalization = "0.1.22"

[dev-dependencies]
assert_fs = "1.0.11"

[profile.release]
codegen-units = 8
debug = false
debug-assertions = false
lto = 'thin'
opt-level = 3
overflow-checks = true
rpath = false
strip = true

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} {{version}}"
sign-commit = true
sign-tag = true

[[bin]]
name = "git-drive"
path = "src/main.rs"
